# proteinmpnn_wrapper

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  example.ipynb  pyproject.toml  setup.py
data/: parsed_pdbs.jsonl
src/: __init__.py
src/proteinmpnn/: __init__.py  constants.py  data.py  process.py  run.py  utils.py
src/proteinmpnn/utils/: biotite_utils.py  log_utils.py  misc.py
